samples/_failures_safe/1761251566_8af8f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d261702e.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_d261702e.c:163:18: error: ‘TOKEN_OPER’ undeclared (first use in this function)
  163 |             case TOKEN_OPER
      |                  ^~~~~~~~~~
./samples/SAFE/__tmp_d261702e.c:163:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d261702e.c:163:13: error: expected ‘:’ or ‘...’ at end of input
  163 |             case TOKEN_OPER
      |             ^~~~
./samples/SAFE/__tmp_d261702e.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d261702e.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d261702e.c:163:13: error: expected declaration or statement at end of input
